Ozhaev Zaynudin Sharik5.cpp.g++log.txt
C:\Users\zainu\Desktop\курс\proekt2\Ozhaev Zaynudin Sharik5.cpp:6:15: error: variable or field 'DrowBall' declared void
 void DrowBall(Ball ball);
               ^
C:\Users\zainu\Desktop\курс\proekt2\Ozhaev Zaynudin Sharik5.cpp:6:15: error: 'Ball' was not declared in this scope
C:\Users\zainu\Desktop\курс\proekt2\Ozhaev Zaynudin Sharik5.cpp: In function 'void MoveBall()':
C:\Users\zainu\Desktop\курс\proekt2\Ozhaev Zaynudin Sharik5.cpp:74:23: error: 'DrowBall' was not declared in this scope
         DrowBall(ball1);
                       ^
C:\Users\zainu\Desktop\курс\proekt2\Ozhaev Zaynudin Sharik5.cpp:83:22: error: 'x1' was not declared in this scope
         PhysicsBall(&x1, &y1, &vx1, &vy1, dt, r1);
                      ^
C:\Users\zainu\Desktop\курс\proekt2\Ozhaev Zaynudin Sharik5.cpp:83:32: error: 'vx1' was not declared in this scope
         PhysicsBall(&x1, &y1, &vx1, &vy1, dt, r1);
                                ^
C:\Users\zainu\Desktop\курс\proekt2\Ozhaev Zaynudin Sharik5.cpp:83:38: error: 'vy1' was not declared in this scope
         PhysicsBall(&x1, &y1, &vx1, &vy1, dt, r1);
                                      ^
C:\Users\zainu\Desktop\курс\proekt2\Ozhaev Zaynudin Sharik5.cpp:83:47: error: 'r1' was not declared in this scope
         PhysicsBall(&x1, &y1, &vx1, &vy1, dt, r1);
                                               ^
C:\Users\zainu\Desktop\курс\proekt2\Ozhaev Zaynudin Sharik5.cpp: In function 'void DrowBall(Ball)':
C:\Users\zainu\Desktop\курс\proekt2\Ozhaev Zaynudin Sharik5.cpp:106:6: warning: no previous declaration for 'void DrowBall(Ball)' [-Wmissing-declarations]
 void DrowBall(Ball ball)
      ^
In file included from c:\users\zainu\desktop\курс\codeblocks\mingw\include\txlib.h:1:0,
                 from C:\Users\zainu\Desktop\курс\proekt2\Ozhaev Zaynudin Sharik5.cpp:1:
C:\Users\zainu\Desktop\курс\proekt2\Ozhaev Zaynudin Sharik5.cpp:108:17: error: 'Color' was not declared in this scope
     txSetColor (Color, 2);
                 ^
C:\Users\zainu\Desktop\курс\proekt2\Ozhaev Zaynudin Sharik5.cpp:109:21: error: 'FillColor' was not declared in this scope
     txSetFillColor (FillColor);
                     ^
C:\Users\zainu\Desktop\курс\proekt2\Ozhaev Zaynudin Sharik5.cpp:111:15: error: 'x' was not declared in this scope
     txCircle (x, y, r);
               ^
C:\Users\zainu\Desktop\курс\proekt2\Ozhaev Zaynudin Sharik5.cpp:111:18: error: 'y' was not declared in this scope
     txCircle (x, y, r);
                  ^
C:\Users\zainu\Desktop\курс\proekt2\Ozhaev Zaynudin Sharik5.cpp:111:21: error: 'r' was not declared in this scope
     txCircle (x, y, r);
                     ^
C:\Users\zainu\Desktop\курс\proekt2\Ozhaev Zaynudin Sharik5.cpp: At global scope:
C:\Users\zainu\Desktop\курс\proekt2\Ozhaev Zaynudin Sharik5.cpp:106:6: warning: unused parameter 'ball' [-Wunused-parameter]
 void DrowBall(Ball ball)
      ^
C:\Users\zainu\Desktop\курс\proekt2\Ozhaev Zaynudin Sharik5.cpp: In function 'void PhysicsBall(int*, int*, int*, int*, int, int)':
C:\Users\zainu\Desktop\курс\proekt2\Ozhaev Zaynudin Sharik5.cpp:158:13: error: invalid conversion from 'int' to 'int*' [-fpermissive]
          vx =   - *vx;
             ^
C:\Users\zainu\Desktop\курс\proekt2\Ozhaev Zaynudin Sharik5.cpp: In function 'void Physics2Ball(int*, int*, int*, int*, int*, int*, int*, int*, int*, int*, int)':
C:\Users\zainu\Desktop\курс\proekt2\Ozhaev Zaynudin Sharik5.cpp:219:20: warning: conversion to 'float' from 'int' may alter its value [-Wconversion]
     float Dx = *x1 - *x2; // стороны треугольника
                    ^
C:\Users\zainu\Desktop\курс\proekt2\Ozhaev Zaynudin Sharik5.cpp:220:20: warning: conversion to 'float' from 'int' may alter its value [-Wconversion]
     float Dy = *y1 - *y2; // стороны треугольника
                    ^
C:\Users\zainu\Desktop\курс\proekt2\Ozhaev Zaynudin Sharik5.cpp:221:33: warning: conversion to 'float' from 'double' may alter its value [-Wconversion]
     float d = sqrt(Dx*Dx + Dy*Dy); if (d == 0) d = 0.01; //гипотенуза
                                 ^
C:\Users\zainu\Desktop\курс\proekt2\Ozhaev Zaynudin Sharik5.cpp:221:45: warning: comparing floating point with == or != is unsafe [-Wfloat-equal]
     float d = sqrt(Dx*Dx + Dy*Dy); if (d == 0) d = 0.01; //гипотенуза
                                             ^
C:\Users\zainu\Desktop\курс\proekt2\Ozhaev Zaynudin Sharik5.cpp:221:50: warning: conversion to 'float' alters 'double' constant value [-Wconversion]
     float d = sqrt(Dx*Dx + Dy*Dy); if (d == 0) d = 0.01; //гипотенуза
                                                  ^
C:\Users\zainu\Desktop\курс\proekt2\Ozhaev Zaynudin Sharik5.cpp:227:26: warning: conversion to 'float' from 'int' may alter its value [-Wconversion]
         float Vn1 = *vx2*sin + *vy2*cos; //поворот системы координат шар1
                          ^
C:\Users\zainu\Desktop\курс\proekt2\Ozhaev Zaynudin Sharik5.cpp:227:37: warning: conversion to 'float' from 'int' may alter its value [-Wconversion]
         float Vn1 = *vx2*sin + *vy2*cos; //поворот системы координат шар1
                                     ^
C:\Users\zainu\Desktop\курс\proekt2\Ozhaev Zaynudin Sharik5.cpp:228:26: warning: conversion to 'float' from 'int' may alter its value [-Wconversion]
         float Vn2 = *vx1*sin + *vy1*cos; //поворот системы координат шар2
                          ^
C:\Users\zainu\Desktop\курс\proekt2\Ozhaev Zaynudin Sharik5.cpp:228:37: warning: conversion to 'float' from 'int' may alter its value [-Wconversion]
         float Vn2 = *vx1*sin + *vy1*cos; //поворот системы координат шар2
                                     ^
C:\Users\zainu\Desktop\курс\proekt2\Ozhaev Zaynudin Sharik5.cpp:229:27: warning: conversion to 'float' from 'int' may alter its value [-Wconversion]
         float Vt1 = -*vx2*cos + *vy2*sin; //поворот системы координат шар1
                           ^
C:\Users\zainu\Desktop\курс\proekt2\Ozhaev Zaynudin Sharik5.cpp:229:38: warning: conversion to 'float' from 'int' may alter its value [-Wconversion]
         float Vt1 = -*vx2*cos + *vy2*sin; //поворот системы координат шар1
                                      ^
C:\Users\zainu\Desktop\курс\proekt2\Ozhaev Zaynudin Sharik5.cpp:230:27: warning: conversion to 'float' from 'int' may alter its value [-Wconversion]
         float Vt2 = -*vx1*cos + *vy1*sin; //поворот системы координат шар2
                           ^
C:\Users\zainu\Desktop\курс\proekt2\Ozhaev Zaynudin Sharik5.cpp:230:38: warning: conversion to 'float' from 'int' may alter its value [-Wconversion]
         float Vt2 = -*vx1*cos + *vy1*sin; //поворот системы координат шар2
                                      ^
C:\Users\zainu\Desktop\курс\proekt2\Ozhaev Zaynudin Sharik5.cpp:236:24: warning: conversion to 'int' from 'float' may alter its value [-Wconversion]
         *vx1 = Vn2*sin - Vt2*cos; //обратный поворот системы координат шар1
                        ^
C:\Users\zainu\Desktop\курс\proekt2\Ozhaev Zaynudin Sharik5.cpp:237:24: warning: conversion to 'int' from 'float' may alter its value [-Wconversion]
         *vy1 = Vn2*cos + Vt2*sin; //обратный поворот системы координат шар1
                        ^
C:\Users\zainu\Desktop\курс\proekt2\Ozhaev Zaynudin Sharik5.cpp:238:24: warning: conversion to 'int' from 'float' may alter its value [-Wconversion]
         *vx2 = Vn1*sin - Vt1*cos; //обратный поворот системы координат шар2
                        ^
C:\Users\zainu\Desktop\курс\proekt2\Ozhaev Zaynudin Sharik5.cpp:239:24: warning: conversion to 'int' from 'float' may alter its value [-Wconversion]
         *vy2 = Vn1*cos + Vt1*sin; //обратный поворот системы координат шар2
                        ^
---------------------------------------------------------------------------------------------
[11.06.2021  9:54:42,17 C:\Users\zainu@DESKTOP-ZAINU, returned 1]
C:\Users\zainu\Desktop\курс\proekt2> g++.exe "C:\Users\zainu\Desktop\курс\proekt2\Ozhaev Zaynudin Sharik5.cpp" -o "C:\Users\zainu\Desktop\курс\proekt2\Ozhaev Zaynudin Sharik5.exe"  -Wshadow -Winit-self -Wredundant-decls -Wcast-align -Wundef -Wfloat-equal -Winline -Wunreachable-code -Wmissing-declarations -Wmissing-include-dirs -Wswitch-enum -Wswitch-default -Weffc++ -Wmain -Wextra -Wall -g -pipe -fexceptions -Wcast-qual -Wconversion -Wctor-dtor-privacy -Wempty-body -Wformat-security -Wformat=2 -Wignored-qualifiers -Wlogical-op -Wmissing-field-initializers -Wnon-virtual-dtor -Woverloaded-virtual -Wpointer-arith -Wsign-promo -Wstack-usage=8192 -Wstrict-aliasing -Wstrict-null-sentinel -Wtype-limits -Wwrite-strings -D_DEBUG -D_EJUDGE_CLIENT_SIDE -D_EJC
